--- a/train.ipynb
+++ b/train.ipynb
@@ -396,8 +396,11 @@
     "def plot_molecule(smiles: str, width: int = 400, height: int = 200) -> None:\n",
     "\n",
     "    '''\n",
-    "    Визуализирует молекулу в 2D (статическое изображение).\n",
-    "    Работает в GitHub Preview.\n",
+    "    Визуализирует молекулу\n",
+    "\n",
+    "    Параметры:\n",
+    "        smiles (str): молекула в формате SMILES\n",
+    "        width (int), height (int): ширина и высота отрисованного окна с 3D молекулой\n",
     "    '''\n",
     "\n",
     "    mol = Chem.MolFromSmiles(smiles)\n",
@@ -1161,7 +1164,7 @@
     "\n",
     "![](https://migalkin.github.io/kgcourse2021/assets/images/l8/l8_mpnn.png)\n",
     "\n",
-    "Она предоставляет мощные инструменты для работы с молекулярными структурами, интегрируя графовые представления молекул и методы машинного обучения \\\n",
+    "Она предоставляет мощные инструменты для работы с молекулярными структурами, интегрируя графовые представления молекул и методы машинного обучения\n",
     "\n",
     "Наилучшие гиперпараметры была подобраны руками\n",
     "\n",
